--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com"  crossorigin>
-    <link href="https://fonts.googleapis.com/css2family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -83,7 +83,7 @@
             <div class="category_for">
                 <img class="category_image big" src="./img/Rectangle_20.svg" alt="women">
                 <svg class="background big" width="1140" height="180" viewBox="0 0 1140 180" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1140 0H0V180H1140V0Z" fill="#211616" fill-opacity="0.7" />
+                <path class="svg-path" d="M1140 0H0V180H1140V0Z" fill="#211616" fill-opacity="0.7" />
                 </svg>
                 <h1 class="category_description_accesories">LUXIROUS & TRENDY <br><span class="title">ACCESORIES</span></h1>
             </div>
